--- a/Homeworks/HW1/problem3part2.ipynb
+++ b/Homeworks/HW1/problem3part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,26 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'float' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Generate random coordinates on [-1,1]\u001b[39;00m\n\u001b[1;32m      2\u001b[0m numPoints \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5e10\u001b[39m\n\u001b[0;32m----> 3\u001b[0m points \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(low\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, high\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, size\u001b[38;5;241m=\u001b[39m(numPoints, \u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPoints:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(points)\n",
-      "File \u001b[0;32mnumpy/random/mtrand.pyx:1158\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.uniform\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m_common.pyx:636\u001b[0m, in \u001b[0;36mnumpy.random._common.cont\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Points:\n",
+      "[[ 0.32449125  0.21901045]\n",
+      " [ 0.08987917  0.89728941]\n",
+      " [-0.41659626 -0.42710841]\n",
+      " ...\n",
+      " [-0.78452809 -0.26874397]\n",
+      " [ 0.1655806  -0.74840705]\n",
+      " [ 0.38955157  0.72139543]]\n"
      ]
     }
    ],
    "source": [
     "#Generate random coordinates on [-1,1]\n",
-    "numPoints = 5e10\n",
+    "numPoints = 50000000\n",
     "points = np.random.uniform(low=-1, high=1, size=(numPoints, 2))\n",
     "\n",
     "print(\"Points:\")\n",
@@ -39,24 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Determine if each point falls inside the unit circle by filtering out ones that don't\n",
-    "points = points[points[:, 0]**2 + points[:, 1]**2 >= 1]"
+    "points = points[points[:, 0]**2 + points[:, 1]**2 <= 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PI Approximation: 0.86104\n"
+      "PI Approximation: 3.14129472\n"
      ]
     }
    ],
