--- a/Homeworks/HW1/problem3part2.ipynb
+++ b/Homeworks/HW1/problem3part2.ipynb
@@ -75,8 +75,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "cognitive",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
