Added HW problem

--- a/Homeworks/HW2/HW2_Problem5Code.ipynb
+++ b/Homeworks/HW2/HW2_Problem5Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,9 @@
     "\n",
     "    actions = []\n",
     "\n",
-    "    possible_actions = [\"T\", \"S\", \"I\"]\n",
+    "    possible_actions = np.array([\"T\", \"S\", \"I\"])\n",
+    "\n",
+    "    \n",
     "\n",
     "    for sample in sample_vector:\n",
     "        if sample == \"DC\":\n",
@@ -52,18 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amount_of_times_to_simulate = 500000\n",
+    "amount_of_times_to_simulate = 10000\n",
     "sim_results = simulate(amount_of_times_to_simulate)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +74,7 @@
      "text": [
       "['C-,I' 'C-,S' 'C-,T' 'D-,I' 'D-,S' 'D-,T' 'DC,I' 'DC,S' 'DC,T' 'OO,I'\n",
       " 'OO,S' 'OO,T']\n",
-      "[  7171  78725  57056  35535   7240 100216   4340  17086  21347  77304\n",
-      "   8589  85391]\n"
+      "[ 148 1585 1161  684  146 2049   91  332  457 1512  160 1675]\n"
      ]
     }
    ],
@@ -86,17 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['C-,I' 'C-,S' 'C-,T' 'D-,I' 'D-,S' 'D-,T' 'DC,I' 'DC,S' 'DC,T' 'OO,I'\n",
-      " 'OO,S' 'OO,T']\n",
-      "[0.0143 0.1574 0.1141 0.0711 0.0145 0.2004 0.0087 0.0342 0.0427 0.1546\n",
-      " 0.0172 0.1708]\n"
+     "ename": "NameError",
+     "evalue": "name 'freqs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m probabilities \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mround(\u001b[43mfreqs\u001b[49m \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mint\u001b[39m(amount_of_times_to_simulate), \u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m (scenarios)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(probabilities)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'freqs' is not defined"
      ]
     }
    ],
@@ -110,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
