--- a/Homeworks/HW2/HW2_Problem5Code.ipynb
+++ b/Homeworks/HW2/HW2_Problem5Code.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import copy as cp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,22 +23,20 @@
     "\n",
     "def get_random_actions(sample_vector : {str}):\n",
     "\n",
-    "    actions = []\n",
+    "    actions = cp.deepcopy(sample_vector)\n",
     "\n",
     "    possible_actions = np.array([\"T\", \"S\", \"I\"])\n",
     "\n",
-    "    \n",
+    "    actions[actions == \"DC\"] = np.random.choice(possible_actions, \n",
+    "        p = [0.5, 0.4, 0.1], size = np.count_nonzero([actions == \"DC\"]))\n",
+    "    actions[actions == \"D-\"] = np.random.choice(possible_actions, \n",
+    "        p = [0.7, 0.05, 0.25], size = np.count_nonzero([actions == \"D-\"]))\n",
+    "    actions[actions == \"C-\"] = np.random.choice(possible_actions, \n",
+    "        p = [0.4, 0.55, 0.05], size = np.count_nonzero([actions == \"C-\"]))\n",
+    "    actions[actions == \"OO\"] = np.random.choice(possible_actions, \n",
+    "        p = [0.5, 0.05, 0.45], size = np.count_nonzero([actions == \"OO\"]))\n",
     "\n",
-    "    for sample in sample_vector:\n",
-    "        if sample == \"DC\":\n",
-    "            actions.append(np.random.choice(possible_actions, p = [0.5, 0.4, 0.1]))\n",
-    "        elif sample == \"D-\":\n",
-    "            actions.append(np.random.choice(possible_actions, p = [0.7, 0.05, 0.25]))\n",
-    "        elif sample == \"C-\":\n",
-    "            actions.append(np.random.choice(possible_actions, p = [0.4, 0.55, 0.05]))\n",
-    "        else:\n",
-    "            actions.append(np.random.choice(possible_actions, p = [0.5, 0.05, 0.45]))\n",
-    "    return np.array(actions)\n",
+    "    return actions\n",
     "\n",
     "def simulate(num_simulations : int = int(1e-3)) -> {str}:\n",
     "    sims = []\n",
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +73,7 @@
      "text": [
       "['C-,I' 'C-,S' 'C-,T' 'D-,I' 'D-,S' 'D-,T' 'DC,I' 'DC,S' 'DC,T' 'OO,I'\n",
       " 'OO,S' 'OO,T']\n",
-      "[ 148 1585 1161  684  146 2049   91  332  457 1512  160 1675]\n"
+      "[ 129 1565 1141  732  140 1966   87  342  419 1562  176 1741]\n"
      ]
     }
    ],
@@ -87,18 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'freqs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m probabilities \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mround(\u001b[43mfreqs\u001b[49m \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mint\u001b[39m(amount_of_times_to_simulate), \u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m (scenarios)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(probabilities)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'freqs' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C-,I' 'C-,S' 'C-,T' 'D-,I' 'D-,S' 'D-,T' 'DC,I' 'DC,S' 'DC,T' 'OO,I'\n",
+      " 'OO,S' 'OO,T']\n",
+      "[0.0129 0.1565 0.1141 0.0732 0.014  0.1966 0.0087 0.0342 0.0419 0.1562\n",
+      " 0.0176 0.1741]\n"
      ]
     }
    ],
