--- a/Homeworks/HW2/HW2_Problem5Code.ipynb
+++ b/Homeworks/HW2/HW2_Problem5Code.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import copy as cp"
+    "import copy as cp\n",
+    "import pandas as pd"
    ]
   },
   {
