Made things in line for pep8

--- a/Homeworks/HW2/HW2_Problem5Code.ipynb
+++ b/Homeworks/HW2/HW2_Problem5Code.ipynb
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "'''Code cell for outputting the sampled probabilities for each join condition in a table'''\n",
+    "# Code cell for outputting the sampled probabilities for each join condition in a table\n",
     "df = simulate_and_output_sampled_probabilities(1000)\n",
     "df.head()\n"
    ]
