--- a/LectureExercises/mpt_lecture_exercises/Stan_MPT_Explorations_CA.ipynb
+++ b/LectureExercises/mpt_lecture_exercises/Stan_MPT_Explorations_CA.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1774ce88-0c1a-464e-b227-bdbd6d10e6c1",
    "metadata": {},
    "outputs": [],
@@ -156,8 +156,14 @@
     "\n",
     "// Model is defining how the potential energy will be defined\n",
     "model {\n",
-    "  theta ~ dirichlet(rep_vector(1, K));\n",
-    "  freqs ~ multinomial(theta);\n",
+    "  \n",
+    "  // theta ~ dirichlet(rep_vector(1, K));\n",
+    "  // freqs ~ multinomial(theta);\n",
+    "\n",
+    "  //Stan converts the above to approximately this, but sometimes this is needed explicitly\n",
+    "  //  when the log probability is needed\n",
+    "  target += dirichlet_lpdf(probs | rep_vector(1, K));\n",
+    "  target += multinomial_lpmf(freqs | probs);\n",
     "}\n",
     "\n",
     "// This section, for l = 1, ..., L\n",
@@ -244,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f0afbc21-08e2-4d4e-8dfc-10317ad70ad9",
    "metadata": {},
    "outputs": [
@@ -438,12 +444,360 @@
    ],
    "source": [
     "# Estimation summary, convergence, and efficiency diagnostics\n",
-    "az.summary(fit)"
+    "az.summary(fit)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "id": "6dd90f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>parameters</th>\n",
+       "      <th>lp__</th>\n",
+       "      <th>accept_stat__</th>\n",
+       "      <th>stepsize__</th>\n",
+       "      <th>treedepth__</th>\n",
+       "      <th>n_leapfrog__</th>\n",
+       "      <th>divergent__</th>\n",
+       "      <th>energy__</th>\n",
+       "      <th>theta.1</th>\n",
+       "      <th>theta.2</th>\n",
+       "      <th>theta.3</th>\n",
+       "      <th>theta.4</th>\n",
+       "      <th>theta.5</th>\n",
+       "      <th>preds.1</th>\n",
+       "      <th>preds.2</th>\n",
+       "      <th>preds.3</th>\n",
+       "      <th>preds.4</th>\n",
+       "      <th>preds.5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>draws</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-147.194866</td>\n",
+       "      <td>0.807057</td>\n",
+       "      <td>0.810009</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149.714426</td>\n",
+       "      <td>0.495933</td>\n",
+       "      <td>0.148567</td>\n",
+       "      <td>0.132523</td>\n",
+       "      <td>0.050776</td>\n",
+       "      <td>0.172201</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-147.247641</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.716083</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149.620528</td>\n",
+       "      <td>0.519857</td>\n",
+       "      <td>0.101043</td>\n",
+       "      <td>0.168810</td>\n",
+       "      <td>0.025078</td>\n",
+       "      <td>0.185212</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-146.617806</td>\n",
+       "      <td>0.779999</td>\n",
+       "      <td>0.779520</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>150.749698</td>\n",
+       "      <td>0.508183</td>\n",
+       "      <td>0.131625</td>\n",
+       "      <td>0.147051</td>\n",
+       "      <td>0.039315</td>\n",
+       "      <td>0.173825</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-146.333389</td>\n",
+       "      <td>0.984483</td>\n",
+       "      <td>0.797420</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>146.901533</td>\n",
+       "      <td>0.460310</td>\n",
+       "      <td>0.099545</td>\n",
+       "      <td>0.204372</td>\n",
+       "      <td>0.033545</td>\n",
+       "      <td>0.202228</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-147.690475</td>\n",
+       "      <td>0.942959</td>\n",
+       "      <td>0.810009</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149.002197</td>\n",
+       "      <td>0.413749</td>\n",
+       "      <td>0.090816</td>\n",
+       "      <td>0.266472</td>\n",
+       "      <td>0.042979</td>\n",
+       "      <td>0.185984</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>-149.166258</td>\n",
+       "      <td>0.749179</td>\n",
+       "      <td>0.797420</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>151.327967</td>\n",
+       "      <td>0.368951</td>\n",
+       "      <td>0.105227</td>\n",
+       "      <td>0.180653</td>\n",
+       "      <td>0.071710</td>\n",
+       "      <td>0.273459</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>-147.292827</td>\n",
+       "      <td>0.997858</td>\n",
+       "      <td>0.810009</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149.316662</td>\n",
+       "      <td>0.444122</td>\n",
+       "      <td>0.123554</td>\n",
+       "      <td>0.155755</td>\n",
+       "      <td>0.032090</td>\n",
+       "      <td>0.244478</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>-149.916930</td>\n",
+       "      <td>0.721062</td>\n",
+       "      <td>0.716083</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>150.740093</td>\n",
+       "      <td>0.335214</td>\n",
+       "      <td>0.152001</td>\n",
+       "      <td>0.264433</td>\n",
+       "      <td>0.031100</td>\n",
+       "      <td>0.217252</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>-146.265073</td>\n",
+       "      <td>0.939413</td>\n",
+       "      <td>0.779520</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>147.280929</td>\n",
+       "      <td>0.460413</td>\n",
+       "      <td>0.125681</td>\n",
+       "      <td>0.221777</td>\n",
+       "      <td>0.046600</td>\n",
+       "      <td>0.145529</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>-147.408685</td>\n",
+       "      <td>0.990958</td>\n",
+       "      <td>0.797420</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>150.360478</td>\n",
+       "      <td>0.532348</td>\n",
+       "      <td>0.120527</td>\n",
+       "      <td>0.166303</td>\n",
+       "      <td>0.052793</td>\n",
+       "      <td>0.128029</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "parameters        lp__  accept_stat__  stepsize__  treedepth__  n_leapfrog__  \\\n",
+       "draws                                                                          \n",
+       "0          -147.194866       0.807057    0.810009          3.0           7.0   \n",
+       "1          -147.247641       1.000000    0.716083          2.0           3.0   \n",
+       "2          -146.617806       0.779999    0.779520          3.0           7.0   \n",
+       "3          -146.333389       0.984483    0.797420          2.0           7.0   \n",
+       "4          -147.690475       0.942959    0.810009          3.0           7.0   \n",
+       "...                ...            ...         ...          ...           ...   \n",
+       "9995       -149.166258       0.749179    0.797420          3.0           7.0   \n",
+       "9996       -147.292827       0.997858    0.810009          3.0           7.0   \n",
+       "9997       -149.916930       0.721062    0.716083          2.0           3.0   \n",
+       "9998       -146.265073       0.939413    0.779520          3.0           7.0   \n",
+       "9999       -147.408685       0.990958    0.797420          3.0           7.0   \n",
+       "\n",
+       "parameters  divergent__    energy__   theta.1   theta.2   theta.3   theta.4  \\\n",
+       "draws                                                                         \n",
+       "0                   0.0  149.714426  0.495933  0.148567  0.132523  0.050776   \n",
+       "1                   0.0  149.620528  0.519857  0.101043  0.168810  0.025078   \n",
+       "2                   0.0  150.749698  0.508183  0.131625  0.147051  0.039315   \n",
+       "3                   0.0  146.901533  0.460310  0.099545  0.204372  0.033545   \n",
+       "4                   0.0  149.002197  0.413749  0.090816  0.266472  0.042979   \n",
+       "...                 ...         ...       ...       ...       ...       ...   \n",
+       "9995                0.0  151.327967  0.368951  0.105227  0.180653  0.071710   \n",
+       "9996                0.0  149.316662  0.444122  0.123554  0.155755  0.032090   \n",
+       "9997                0.0  150.740093  0.335214  0.152001  0.264433  0.031100   \n",
+       "9998                0.0  147.280929  0.460413  0.125681  0.221777  0.046600   \n",
+       "9999                0.0  150.360478  0.532348  0.120527  0.166303  0.052793   \n",
+       "\n",
+       "parameters   theta.5  preds.1  preds.2  preds.3  preds.4  preds.5  \n",
+       "draws                                                              \n",
+       "0           0.172201     47.0     12.0     15.0      5.0     21.0  \n",
+       "1           0.185212     53.0     12.0     13.0      3.0     19.0  \n",
+       "2           0.173825     60.0     11.0     11.0      2.0     16.0  \n",
+       "3           0.202228     51.0     11.0     21.0      1.0     16.0  \n",
+       "4           0.185984     36.0      5.0     28.0      3.0     28.0  \n",
+       "...              ...      ...      ...      ...      ...      ...  \n",
+       "9995        0.273459     40.0     13.0     21.0      4.0     22.0  \n",
+       "9996        0.244478     33.0     14.0     21.0      5.0     27.0  \n",
+       "9997        0.217252     32.0     14.0     27.0      5.0     22.0  \n",
+       "9998        0.145529     40.0     15.0     27.0      4.0     14.0  \n",
+       "9999        0.128029     51.0     13.0     13.0      3.0     20.0  \n",
+       "\n",
+       "[10000 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit.to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "68b2087b",
    "metadata": {},
    "outputs": [],
@@ -457,6 +811,14 @@
     "    'other': .2 \n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e135132c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
