More 3-20 lecture stuff

--- a/LectureExercises/mpt_lecture_exercises/MPT_Initial_Explorations.ipynb
+++ b/LectureExercises/mpt_lecture_exercises/MPT_Initial_Explorations.ipynb
@@ -181,17 +181,15 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello\")"
+    "model {\n",
+    "    target += dirichlet_lpdf(probs | rep_vector(2, 5));\n",
+    "    target += multinomial_lpmf(freqs | probs);\n",
+    "}"
    ]
   }
  ],
