Made some changes to conform better to pep8

--- a/Homeworks/HW2/HW2_Problem5Code.ipynb
+++ b/Homeworks/HW2/HW2_Problem5Code.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_cards(num_samples : int = int(1e-3)) -> str:\n",
+    "def draw_cards(num_samples : int = 1000) -> str:\n",
     "    \n",
     "    \"\"\" Simulates drawing cards for a specific number of samples\n",
     "    \n",
@@ -38,8 +38,7 @@
     "        [3/35, 10/35,10/35, 12/35], size = num_samples)\n",
     "    return sample_vector\n",
     "\n",
-    "def get_random_actions(sample_vector : {str}):\n",
-    "\n",
+    "def get_random_actions(sample_vector: np.array):\n",
     "    \"\"\" Simulates getting the actions the player might take\n",
     "    \n",
     "    Parameters:\n",
@@ -71,21 +70,18 @@
     "\n",
     "    return actions\n",
     "\n",
-    "def simulate(num_simulations : int = int(1e-3)) -> {str}:\n",
-    "\n",
+    "def simulate(num_simulations : int = int(1e-3)) -> list[str]:\n",
     "    \"\"\" Simulate both drawing the cards and the player taking an action\n",
     "    \n",
     "    Parameters:\n",
     "    -----------\n",
-    "\n",
-    "    num_simulations     : int\n",
+    "    num_simulations  : int\n",
     "        Simulate our experiment using this number of samples.\n",
     "\n",
     "    Returns:\n",
     "    --------\n",
     "    List[str]\n",
     "        Returns a string representing all parts of the sample spaace\n",
-    "\n",
     "    \"\"\"\n",
     "\n",
     "    sims = []\n",
