Just removed some double quotes

--- a/Homeworks/HW3/hw_3_problem6.ipynb
+++ b/Homeworks/HW3/hw_3_problem6.ipynb
@@ -580,8 +580,8 @@
     "results_df = fit.to_frame()\n",
     "\n",
     "ax = sns.histplot(results_df[['v1', 'v2']])\n",
-    "ax.axvline(np.mean(results_df['v1']), color=\"blue\", linestyle=\"dotted\", lw=4)\n",
-    "ax.axvline(np.mean(results_df['v2']), color=\"orange\", linestyle=\"dotted\", lw=4)"
+    "ax.axvline(np.mean(results_df['v1']), color='blue', linestyle='dotted', lw=4)\n",
+    "ax.axvline(np.mean(results_df['v2']), color='orange', linestyle='dotted', lw=4)"
    ]
   },
   {
