--- a/Homeworks/HW3/hw_3_problem4.ipynb
+++ b/Homeworks/HW3/hw_3_problem4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "try:\n",
     "    import arviz as az\n",
     "except ImportError as err:\n",
-    "    print(\"Please, install arviz for easy visualization of Stan models.\")\n",
+    "    print('Please, install arviz for easy visualization of Stan models.')\n",
     "\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +85,9 @@
     }
    ],
    "source": [
-    "ax = sns.histplot({\"Prior\": prior, \"Posterior\": posterior}, kde=True, stat=\"probability\")\n",
-    "ax.axvline(np.mean(prior), color=\"blue\", linestyle=\"dotted\", lw=4)\n",
-    "ax.axvline(np.mean(posterior), color=\"orange\", linestyle=\"dotted\", lw=2)"
+    "ax = sns.histplot({'Prior': prior, 'Posterior': posterior}, kde=True, stat='probability')\n",
+    "ax.axvline(np.mean(prior), color='blue', linestyle='dotted', lw=4)\n",
+    "ax.axvline(np.mean(posterior), color='orange', linestyle='dotted', lw=2)"
    ]
   }
  ],
