Added stuff for problem 3 to reduce RMSE

--- a/LectureExercises/mpt_lecture_exercises/Stan_MPT_Explorations_CA.ipynb
+++ b/LectureExercises/mpt_lecture_exercises/Stan_MPT_Explorations_CA.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "1650025f-240d-41c4-a803-c57dc10f0dcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/krupkaa/anaconda3/envs/cognitive/lib/python3.12/site-packages/numpy/_core/getlimits.py:551: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
+      "This warnings indicates broken support for the dtype!\n",
+      "  machar = _get_machar(dtype)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "011b7d27-f44e-4ea5-8125-6f9d2a30256c",
    "metadata": {},
    "outputs": [
@@ -90,7 +100,7 @@
        "responses       47         12      19      4     18"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "1774ce88-0c1a-464e-b227-bdbd6d10e6c1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "c313853e-2f62-4636-83b8-2c777564f9ee",
    "metadata": {},
    "outputs": [
@@ -202,24 +212,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Building: 78.8s, done.Sampling:   0%\n",
+      "Building: found in cache, done.Sampling:   0%\n",
       "Sampling:  25% (3500/14000)\n",
       "Sampling:  50% (7000/14000)\n",
       "Sampling:  75% (10500/14000)\n",
       "Sampling: 100% (14000/14000)\n",
       "Sampling: 100% (14000/14000), done.\n",
       "Messages received during sampling:\n",
-      "  Gradient evaluation took 8.5e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.85 seconds.\n",
+      "  Gradient evaluation took 5.5e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.55 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 8.5e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.85 seconds.\n",
+      "  Gradient evaluation took 7.3e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.73 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 0.000107 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 1.07 seconds.\n",
+      "  Gradient evaluation took 5.2e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.52 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 9.1e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.91 seconds.\n",
+      "  Gradient evaluation took 5.4e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.54 seconds.\n",
       "  Adjust your expectations accordingly!\n"
      ]
     }
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "f0afbc21-08e2-4d4e-8dfc-10317ad70ad9",
    "metadata": {},
    "outputs": [
@@ -437,7 +447,7 @@
        "preds[4]    9181.0    1.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "6dd90f61",
    "metadata": {},
    "outputs": [
@@ -786,7 +796,7 @@
        "[10000 rows x 17 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "68b2087b",
    "metadata": {},
    "outputs": [],
@@ -822,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "34dc3261-d848-44f6-8b09-4041e1f4e0ba",
    "metadata": {},
    "outputs": [
@@ -845,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "83ff31b5",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1050,7 @@
        "4           0.185984     36.0      5.0     28.0      3.0     28.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "11806136-6d95-476b-8bbd-52d7a56aa799",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "76afc3b8",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1164,7 @@
        "array([59, 15,  3, 12, 31])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "20c48a96-356d-44a0-a2f4-f43f8f8dfd38",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "905735e6",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "a48e7896",
    "metadata": {},
    "outputs": [
@@ -1268,19 +1278,23 @@
      "output_type": "stream",
      "text": [
       "Sampling:   0%\n",
-      "Sampling: 100%, done.\n",
+      "Sampling:  25% (3500/14000)\n",
+      "Sampling:  50% (7000/14000)\n",
+      "Sampling:  75% (10500/14000)\n",
+      "Sampling: 100% (14000/14000)\n",
+      "Sampling: 100% (14000/14000), done.\n",
       "Messages received during sampling:\n",
-      "  Gradient evaluation took 7.7e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.77 seconds.\n",
+      "  Gradient evaluation took 8e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.8 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 8.9e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.89 seconds.\n",
+      "  Gradient evaluation took 5.5e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.55 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 0.000146 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 1.46 seconds.\n",
+      "  Gradient evaluation took 5e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.5 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 0.000142 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 1.42 seconds.\n",
+      "  Gradient evaluation took 5.1e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.51 seconds.\n",
       "  Adjust your expectations accordingly!\n"
      ]
     },
@@ -1467,7 +1481,7 @@
        "preds[4]    8914.0    1.0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "4e7e496c",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "4cbb8b04",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1527,7 @@
        "<Axes: xlabel='preds.5', ylabel='Count'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1543,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "42371b2e",
    "metadata": {},
    "outputs": [],
