Added some more stuff on MPT code and looks to work

--- a/LectureExercises/mpt_lecture_exercises/Stan_MPT_Explorations_CA.ipynb
+++ b/LectureExercises/mpt_lecture_exercises/Stan_MPT_Explorations_CA.ipynb
@@ -1175,14 +1175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "20c48a96-356d-44a0-a2f4-f43f8f8dfd38",
    "metadata": {},
    "outputs": [],
    "source": [
     "mpt_model_code = \"\"\"\n",
     "data {\n",
-    "  int<lower=1> N; // Number of trials\n",
+    "  int<lower=1> Nold; // Number of trials for old words\n",
+    "  int<lower=1> Nnew; // Number of trials for new words\n",
     "  int<lower=1> K; // Number of categories\n",
     "  array[K] int<lower=0, upper=N> freqs;\n",
     "}\n",
