Done some stuff

--- a/Project/muonPhysics.ipynb
+++ b/Project/muonPhysics.ipynb
@@ -119,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "106dca38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stan_code = \"\"\"\n",
+    "stan_code = \"\"\" //THIS NEEDS TO BE MODIFIED TO BE A MIXTURE OF AN EXPONENTIAL AND A UNIFORM (GUIDE: https://mc-stan.org/docs/stan-users-guide/finite-mixtures.html) (DEBUG)\n",
     "\n",
     "data {\n",
     "    int<lower=1> N; // Size of the data\n",
-    "    vector[N] eps; // Number of events\n",
-    "    vector[N] y; // Vector of distributions (?)\n",
+    "    vector[N] x; // Bin centers (each bin is a range of the end point of a time interval)\n",
+    "    vector[N] y; // Number of events (histogram heights)\n",
     "}\n",
     "\n",
     "parameters {\n",
