--- a/Project/muonPhysics.ipynb
+++ b/Project/muonPhysics.ipynb
@@ -135,6 +135,7 @@
     "parameters {\n",
     "    real lambda; // Decay rate of a muon\n",
     "    real beta; // Regression parameter\n",
+    "    real<lower=0,upper=1> w; // Weights for the exponential (muon) and uniform (background radiation) distributions respectively\n",
     "}\n",
     "\n",
     "model {\n",
